interstellar/tests/snapshots/gql_snapshots__error_invalid_literal.snap
---
source: tests/gql_snapshots.rs
expression: "format!(\"{}\", err)"
---
"Syntax error:  --> 1:16\n  |\n1 | MATCH (n {age: @invalid}) RETURN n\n  |                ^---\n  |\n  = expected literal"
