interstellar/tests/snapshots/gql_snapshots__parse_alter_edge_type_allow_additional_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  AlterEdgeType:
    name: KNOWS
    action: AllowAdditionalProperties
