interstellar/tests/snapshots/gql_snapshots__parse_alter_node_type_add_property_with_default_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Ddl:
  AlterNodeType:
    name: Person
    action:
      AddProperty:
        name: verified
        prop_type: Bool
        required: false
        default:
          Bool: false
